apps/base/clirelay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clirelay
  labels:
    app: clirelay
spec:
  type: ClusterIP
  selector:
    app: clirelay
  ports:
    - name: http
      port: 8317
      targetPort: http
